Add "Inter" font

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
+@import './styles/fonts.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   :root {
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
     --background: 0 0% 100%; /* white */
     --foreground: 240 10% 3.9%; /* gray-950 */
 
