--- a/src/index.css
+++ b/src/index.css
@@ -12,71 +12,69 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    --background: 0 0% 100%; /* white */
-    --foreground: 240 10% 3.9%; /* gray-950 */
+    --background: 0 0% 98%; /*neutral-50*/
+    --foreground: 0 0% 3.9%; /* neutral-950 */
 
-    --muted: 240 4.8% 95.9%; /* gray-100 */
-    --muted-foreground: 240 3.8% 46.1%; /* gray-500 */
+    --muted: 0 0% 96.1%; /* neutral-100 */
+    --muted-foreground: 0 0% 45.1%; /* neutral-500 */
 
-    --popover: 0 0% 100%; /* white */
-    --popover-foreground: 240 10% 3.9%; /* gray-950 */
+    --popover: 0 0% 98%; /* neutral-50 */
+    --popover-foreground: 0 0% 3.9%; /* neutral-950 */
 
-    --card: 0 0% 100%; /* white */
-    --card-foreground: 240 10% 3.9%; /* gray-950 */
+    --card: 0 0% 96.1%; /* neutral-100 */
+    --card-foreground: 0 0% 45.1%; /* neutral-500 */
 
-    --border: 240 5.9% 90%; /* gray-200 */
-    --input: 240 5.9% 90%; /* gray-200 */
+    --border: 0 0% 83.1%; /* neutral-300 */
+    --input: 0 0% 98%; /* neutral-50 */
 
     --primary: 346.8 77.2% 49.8%; /* rose-600 */
-    --primary-foreground: 0 0% 100%; /* white */
+    --primary-foreground: 0 0% 98%; /* neutral-50 */
 
-    --secondary: 240 4.8% 95.9%; /* gray-100 */
-    --secondary-foreground: 240 5.9% 10%; /* gray-900 */
+    --secondary: 0 0% 3.9%; /* neutral-950 */
+    --secondary-foreground: 0 0% 98%; /* neutral-50 */
 
-    --accent: 240 4.8% 95.9%; /* gray-100 */
-    --accent-foreground: 240 5.9% 10%; /* gray-900 */
+    --accent: 346.8 77.2% 49.8%; /* rose-600 */
+    --accent-foreground: 0 0% 98%; /* neutral-50 */
 
     --destructive: 0 84.2% 60.2%; /* red-500 */
     --destructive-foreground: 0 0% 100%; /* white */
 
-    --border: 216 12.2% 83.9%; /* gray-300 */
-    --outline: 216 12.2% 83.9%; /* gray-300 */
-    --ring: 240 5% 64.9%; /* gray-400 */
+    --outline: 0 0% 83.1%; /* neutral-300 */
+    --ring: 0 0% 63.9%; /* neutral-400 */
 
     --radius: 1rem;
   }
 
   .dark {
-    --background: 240 10% 3.9%; /* gray-950 */
-    --foreground: 0 0% 100%; /* white */
+    --background: 0 0% 3.9%; /* neutral-950 */
+    --foreground: 0 0% 98%; /* neutral-50 */
 
-    --muted: 240 3.8% 14.9%; /* gray-800 */
-    --muted-foreground: 240 5% 64.9%; /* gray-400 */
+    --muted: 0 0% 9%; /* neutral-900 */
+    --muted-foreground: 0 0% 45.1%; /* neutral-500 */
 
-    --popover: 240 10% 3.9%; /* gray-950 */
-    --popover-foreground: 0 0% 100%; /* white */
+    --popover: 0 0% 3.9%; /* neutral-950 */
+    --popover-foreground: 0 0% 98%; /* neutral-50 */
 
-    --card: 240 10% 3.9%; /* gray-950 */
-    --card-foreground: 0 0% 100%; /* white */
+    --card: 0 0% 9%; /* neutral-900 */
+    --card-foreground: 0 0% 45.1%; /* neutral-500 */
 
-    --border: 240 3.7% 15.9%; /* gray-700 */
-    --input: 240 3.7% 15.9%; /* gray-700 */
+    --border: 0 0% 14.9%; /* neutral-700 */
+    --input: 0 0% 9%; /* neutral-900 */
 
-    --primary: 349.7 89.2% 60.2%; /* rose-500 */
-    --primary-foreground: 240 10% 3.9%; /* gray-950 */
+    --primary: 351.3 94.5% 71.4%; /* rose-400 */
+    --primary-foreground: 0 0% 3.9%; /* neutral-950 */
 
-    --secondary: 240 3.7% 15.9%; /* gray-700 */
-    --secondary-foreground: 0 0% 100%; /* white */
+    --secondary: 0 0% 98%; /* neutral-50 */
+    --secondary-foreground: 0 0% 3.9%; /* neutral-950 */
 
-    --accent: 240 3.7% 15.9%; /* gray-700 */
-    --accent-foreground: 0 0% 100%; /* white */
+    --accent: 351.3 94.5% 71.4%; /* rose-400 */
+    --accent-foreground: 0 0% 3.9%; /* neutral-950 */
 
-    --destructive: 0 62.8% 30.6%; /* red-900 */
-    --destructive-foreground: 0 85.7% 97.3%; /* red-50 */
+    --destructive: 0 84.2% 60.2%; /* red-500 */
+    --destructive-foreground: 0 0% 100%; /* white */
 
-    --border: 240 3.7% 15.9%; /* gray-700 */
-    --outline: 240 3.7% 15.9%; /* gray-700 */
-    --ring: 240 3.7% 15.9%; /* gray-700 */
+    --outline: 0 0% 25.1%; /* neutral-700 */
+    --ring: 0 0% 25.1%; /* neutral-700 */
   }
 
   h1,
